# rust-justice

./: .gitignore  .gitmodules  Cargo.toml  README.md
Justice-Website-main/: README.md  package-lock.json  package.json
Justice-Website-main/.bolt/supabase_discarded_migrations/: 20250124070247_little_feather.sql
Justice-Website-main/src/: App.tsx  main.tsx
Justice-Website-main/src/components/: BankAccountManagement.tsx  CaseSearch.tsx  ChatBot.tsx  CourtCalendar.tsx  CourtList.tsx  CourtLocations.tsx  DocumentUploadCenter.tsx  HelpCenter.tsx  Layout.tsx  LegalFormsBrowser.tsx  LocationSelector.tsx  ProgramManagement.tsx  RegulationAnalysis.tsx  SelectedCourtBanner.tsx  StaffDirectory.tsx  TestManagement.tsx  TestTaking.tsx  TrafficTicketPayment.tsx  UserPortal.tsx
Justice-Website-main/src/context/: CourtContext.tsx  LocationContext.tsx
Justice-Website-main/src/lib/: auth.ts  supabase.ts
Justice-Website-main/src/pages/: AdminPanel.tsx  Administration.tsx  Building.tsx  Courts.tsx  ForgotPassword.tsx  Help.tsx  Home.tsx  Licensing.tsx  Login.tsx  News.tsx  Programs.tsx  Regulation.tsx  ResetPassword.tsx  SelfService.tsx
Justice-Website-main/supabase/migrations/: 20250124052708_black_waterfall.sql  20250124053813_crimson_smoke.sql  20250124054744_muddy_grove.sql  20250124054947_damp_ocean.sql  20250124055023_precious_island.sql  20250124055048_twilight_hill.sql  20250124055643_rough_water.sql  20250124062109_fierce_rain.sql  20250124062646_withered_tower.sql  20250124062940_mute_mountain.sql  20250124063445_still_mode.sql  20250124063539_dusty_sun.sql  20250124063805_rough_coast.sql  20250124063936_bright_lagoon.sql  20250124064157_floral_salad.sql  20250124064302_jolly_shadow.sql  20250124064440_stark_lagoon.sql  20250124064605_rough_bridge.sql  20250124064717_polished_dawn.sql  20250124064830_still_garden.sql  20250124065345_heavy_swamp.sql  20250124065529_little_manor.sql  20250124163213_turquoise_truth.sql  20250124163329_tight_gate.sql  20250124163530_aged_sound.sql  20250124163746_light_portal.sql  20250124164934_lucky_poetry.sql  20250124165032_wandering_palace.sql  20250124165105_old_heart.sql  20250124165236_still_dew.sql  20250124165713_billowing_star.sql  20250124165804_fragrant_credit.sql  20250124165856_scarlet_mountain.sql  20250124165936_orange_smoke.sql  20250124170026_crimson_prism.sql  20250124170108_flat_thunder.sql  20250124170155_polished_water.sql  20250124170300_icy_stream.sql  20250124170432_broad_boat.sql  20250124170624_crimson_frog.sql  (+89 more)
Justice/crates/justice-eustress/src/: evidence.rs  resources.rs
Justice/crates/justice-usc/: Cargo.toml
Justice/crates/justice-usc/data/: 18-1341.toml  18-1343.toml
Justice/crates/justice-usc/src/: citation.rs  downloader.rs  error.rs  lib.rs  main.rs  parser.rs  types.rs
Justice/scripts/: justice_events.luau  justice_soul.rune
Website/: Cargo.toml  Trunk.toml  index.html  input.css  package.json  tailwind.config.js
Website/src/: app.rs  lib.rs
Website/src/components/: footer.rs  mod.rs  navigation.rs
Website/src/pages/: about.rs  courts.rs  help.rs  home.rs  mod.rs  platform.rs  regulation.rs  self_service.rs  simulation.rs  technology.rs
crates/justice-eustress/: Cargo.toml  README.md
crates/justice-eustress/src/: courtroom.rs  entities.rs  events.rs  lib.rs  networking.rs  systems.rs  training.rs
docs/: ADVANCED_DEPTH_ML_INTEGRATION.md  AUTOMATIONS.md  CONTRIBUTING.md  EUSTRESS_STREAMS_BACKBONE.md  INTERACTIVE_MAP.md  JUSTICE_ECOSYSTEM_VISION.md  JUSTICE_ONTOLOGY.md  PHASES.md  SYSTEM_ARCHITECTURE.md  USC_INTEGRATION.md
usc/: README.md
