[workspace]
resolver = "2"
members = [
    "website",
    "crates/justice-eustress",
]

# Exclude upstream repos from workspace - they have their own workspaces
exclude = [
    "Eustress",
    "Conceptual",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/WeaveITMeta/rust-justice"

[workspace.dependencies]
# Justice crates
justice-eustress = { path = "crates/justice-eustress" }

# Leptos for web
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = "0.7"
leptos_router = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"

# WASM
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
